* Resolving issues wesley noticed. Disabling margins on mobile, making midsize tablet look nicer,

--- a/frontend/src/app/card.css
+++ b/frontend/src/app/card.css
@@ -1,14 +1,12 @@
 .card {
-    max-width: 640px;
-    width: auto;
-    min-width: 300px;
-    margin: 50px auto;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (min-width: 640px) {
     .card {
-        width: 100%;
-        margin-left: 10px;
-        margin-right: 10px;
+        width: 640px;
+        margin: 50px auto;
     }
 }
